--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h6 class="text-hv">Weaving Web Wonders...</h6>
     <hr style="width:200px" class="w3-opacity">
     <p> <b>Namaskaram!</b> <br>
-      I'm Krishna Kumar Gupta, a passionate and dedicated web developer with a growing expertise in front-end and back-end technologies. I am pursuing degree in Master of Computer Applications<i><b>(MCA)</b> from Lakshmi Narain College of Technology, Bhopal.</i> affiliated with <b>RGPV University</b>, Bhopal. MP.<br>
+      I'm Krishna Kumar Gupta, a passionate and dedicated web developer with growing expertise in front-end and back-end technologies. I am pursuing a degree in Master of Computer Applications<i><b>(MCA)</b> from Lakshmi Narain College of Technology, Bhopal.</i> affiliated with <b>RGPV University</b>, Bhopal. MP.<br>
 I love transforming ideas into dynamic and responsive web applications. My journey in web development has allowed me to gain a strong foundation in <b>HTML, CSS, JavaScript,</b> and I'm continuously expanding my skills in advanced Java concepts, particularly as I dive deeper into Advanced Java with <b>Spring Boot</b> framework.<br>
-Beyond coding, I’m a strong advocate for collaboration and community to enhance my teamwork and leadership skills and build meaningful connections within the tech community.<br>
+Beyond coding, I strongly advocate for collaboration and community to enhance my teamwork and leadership skills and build meaningful connections within the tech community.<br>
 I also enjoy exploring <b>scientific research works</b> and aspire to contribute to the ever-evolving technological landscape.
-My passion for philosophy and logical thinking approach fuels my desire to think critically and explore new perspectives, which directly influences my approach to programming.
+My passion for philosophy and logical thinking approach fuels my desire to think critically and explore new perspectives, directly influencing my programming approach.
 With a detail-oriented approach and a drive to continuously learn and improve, I'm eager to contribute to innovative projects and take on challenging roles where I can grow and help businesses thrive through technology.<br>
 <b>Danyawad🙏...</b>
     </p>
@@ -125,7 +125,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
         Partners
       </div>
       <div class="w3-quarter w3-section ">
-        <span class="w3-xlarge text-hv">2+</span><br>
+        <span class="w3-xlarge text-hv">4+</span><br>
         Projects Done
       </div>
       <div class="w3-quarter w3-section">
