--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
       </div>
     </div>
 
-    <div style="display: flex; flex-direction: row; gap: 20px;">
+    <div class="hire-res-div">
       <!-- Download-Resume -->
-      <div>
-        <button class="w3-button w3-light-grey w3-padding-large w3-section" >
+      <div class="res">
+        <button class="w3-button w3-light-grey w3-padding-large w3-section h-btn  " >
           <i class="fa fa-download" ></i> <a style="text-decoration: none;" href="https://drive.google.com/file/d/11KQbYIuvBrjsR6vZu3LXhQ8ks6Faz6ia/view?usp=sharing" class="w3-hover-text-red"><b>Download Resume</b></a>
         </button>
         <!--End Download-Resume -->
       </div>
   
       <!-- Hiring Addition -->  
-      <div>
-        <button class="w3-button w3-light-grey w3-padding-large w3-section" >
+      <div class="hire">
+        <button class="w3-button w3-light-grey w3-padding-large w3-section h-btn  " >
           <i class="fa fa-briefcase" ></i> <a style="text-decoration: none;" href="https://wa.me/918318748559/" class="w3-hover-text-red"><b> Let’s Create Together(Hire)</b></a>
         </button>
         <!-- End Hiring Addition -->
@@ -290,13 +290,13 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
       <p>
-        <button class="w3-button w3-light-grey w3-padding-large w3-hover-text-green" type="submit">
+        <button class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn " type="submit">
           <i class="fa fa-paper-plane"></i> <b>SEND MESSAGE</b>
         </button>
       </p>
       <!-- Query Addition -->
       <p>
-        <div class="w3-button w3-light-grey w3-padding-large w3-hover-text-green">
+        <div class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn ">
           <i class="fa fa-question-circle"></i> <a href="https://forms.gle/33HCFHBXbvGTdSK79" target="_blank" style="text-decoration: none;"><b>Any Query</b></a>
         </div>
       </p>
