--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <title>कृष्णः पत्रपुस्तम्(Portfolio)</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" href="images/favicon.ico" />
+<!-- Open-graph properties -->
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="https://krishnaaportfolio.vercel.app"/>
+<meta property="og:title" content="A Glimpse of Krishnaa."/>
+<meta property="og:description" content="Krishnaa is a passionate and dedicated web developer with growing expertise in front-end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles where I can grow and help businesses thrive through technology."/>
+<meta property="og:image" content="https://krishnaaportfolio.vercel.app/images/main.png"/>
+<!--End Open-graph properties -->
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
