--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="A Glimpse of Krishnaa."/>
 <meta property="og:description" content="Krishnaa is a passionate and dedicated web developer with growing expertise in front-end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles..."/>
-<meta property="og:image" content="https://krishnaaportfolio.vercel.app/images/main.png"/>
+<meta property="og:image" content="https://krishnaaportfolio.vercel.app"/>
 <meta property="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
 <!--End Open-graph properties -->
