--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://krishnaaportfolio.vercel.app">
 <meta property="og:type" content="profile">
 <meta property="og:title" content="A Glimpse of Krishnaa.">
-<meta property="og:description" content="Krishnaa is a passionate and dedicated web developer with growing expertise in front end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
+<meta property="og:description" content="Krishna is a passionate and dedicated web developer with growing expertise in front-end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
 <meta property="og:image" content="https://krishnaaportfolio.vercel.app/images/main.png">
 <meta property="og:image:width" content="200">
 <meta property="og:image:height" content="200">
@@ -315,22 +315,31 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
-    <form action="/action_page.php" target="_blank">
+    <form name="submit-to-google-sheet" target="_blank">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn " type="submit">
-          <i class="fa fa-paper-plane"></i> <b>SEND MESSAGE</b>
-        </button>
-      </p>
-      <!-- Query Addition -->
-      <p>
-        <div class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn ">
-          <i class="fa fa-question-circle"></i> <a href="https://forms.gle/33HCFHBXbvGTdSK79" target="_blank" style="text-decoration: none;"><b>Any Query</b></a>
+
+      <div style="display: flex; flex-direction: row; gap: 20px;">
+        <div>
+          <button class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn" type="submit">
+            <i class="fa fa-paper-plane"></i> <b>SEND MESSAGE</b>
+          </button>
         </div>
-      </p>
+        <div>
+          <button class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn" type="reset">
+            <i class="fa fa-refresh"></i> <b>Reset</b>
+          </button>
+        </div>
+      <!-- Query Addition -->
+        <!-- <div>
+            <div class="w3-button w3-light-grey w3-padding-large w3-hover-text-green h-btn">
+              <i class="fa fa-question-circle"></i> <a href="https://forms.gle/33HCFHBXbvGTdSK79" target="_blank" style="text-decoration: none;"><b>Any Query</b></a>
+            </div>
+        </div> -->
+      </div>
+
       <!-- End Query Addition -->
     </form>
   <!-- End Contact Section -->
@@ -358,5 +367,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
 </div>
 
 <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="contactForm.js"></script>
+<!-- reference for data collection: https://github.com/jamiewilson/form-to-google-sheets -->
 </body>
 </html>
