--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://krishnaaportfolio.vercel.app">
 <meta property="og:type" content="profile">
 <meta property="og:title" content="A Glimpse of Krishnaa.">
-<meta property="og:description" content="Krishna is a passionate and dedicated web developer with growing expertise in front-end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
+<meta property="og:description" content="Krishnaa is a passionate and dedicated web developer with growing expertise in front end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
 <meta property="og:image" content="https://krishnaaportfolio.vercel.app/images/main.png">
 <meta property="og:image:width" content="200">
 <meta property="og:image:height" content="200">
@@ -36,7 +36,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <a href="index.html"><img src="./images/k-logo.png" style="width:100%; border-radius: 50%;"></a>
+  <a href="index.html"><img src="./images/k-logo.png" alt="Krishna-Logo" style="width:100%; border-radius: 50%;"></a>
   <br>
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-home w3-xxlarge icon-hvr"></i>
@@ -73,7 +73,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo"><span class="w3-hide-small dynamic-text icon-hvr">I'm Krishna Kumar Gupta...</span></h1>
     <p class="w3-text-light-green">Enthusiastic and creative web designer crafting engaging experiences.</p>
     <div class="grow-img">
-      <img src="./images/main.png" alt="boy" class="w3-image radius-main " width="992" height="1108">
+      <img src="./images/main.png" alt="Krishna Kumar Gupta" class="w3-image radius-main " width="992" height="1108">
     </div>
   </header>
 
@@ -161,7 +161,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
       <!-- Hiring Addition -->  
       <div class="hire ">
         <button class="w3-button w3-light-grey w3-padding-large w3-section h-btn " >
-          <i class="fa fa-briefcase" ></i> <a style="text-decoration: none;" href="https://wa.me/918318748559/" class="w3-hover-text-red"><b> Let’s Create Together(Hire)</b></a>
+          <i class="fa fa-briefcase" ></i> <a style="text-decoration: none;" href="https://wa.me/918*****9/" class="w3-hover-text-red"><b> Let’s Create Together(Hire)</b></a>
         </button>
         <!-- End Hiring Addition -->
       </div>
@@ -195,28 +195,28 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <!-- End Grid/Pricing tables -->
     </div>
     
-    <!-- Testimonials -->
+    <!-- Testimonials: Experience -->
     <h3 class="w3-padding-24 w3-text-light-green ">My Experience</h3>  
 
-    <img src="/images/tspls.png" alt="Avatar" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
+    <img src="/images/tspls.png" alt="tsplus" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
     <p class="text-edu-hv"><span class="w3-large w3-margin-right"> <b>TechSimPlus Ent. Ltd. </b><i>(Bhopal, Madhya Pradesh)</i></span>
       <br>Frontend Developer Intern(On-site) | Sept'2024 - Current
     </p>
     <p class="slide-hvr">"Currently learning Frontend Development with React.Js Framework."</p>
     <hr>
 
-    <img src="/images/cna.png" alt="Avatar" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
+    <img src="/images/cna.png" alt="Cna" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
     <p class="text-edu-hv">
       <span class="w3-large w3-margin-right"> <b>Cisco Networking Academy by NIIT Foundation. </b><i>(Bhopal, Madhya Pradesh)</i></span>
-      <br>AICTE-Cisco Virtual Internship Program in Networking.(Remote) | May'2024 - July'2024
+      <br>AICTE-Cisco Virtual Internship Program in Networking(Remote) | May'2024 - July'2024
     </p>
     <p class="slide-hvr">"Completed Essential Networking Training with Packet Tracer."</p>
     <hr>
 
-    <img src="/images/cci.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
+    <img src="/images/cci.jpg" alt="Codsoft" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
     <p class="text-edu-hv">
       <span class="w3-large w3-margin-right"> <b>CodSoft Pvt. Ltd. </b><i>(Kolkata, West Bengal)</i></span>
-      <br>Web Developer Intern(Remote) | Feb'2024 - March'2024
+      <br>Web Developer Intern(Remote) | Feb'2024 - March'2024 
     </p>
     <p class="slide-hvr skill-txt">"Enhanced the knowledge about HTML, CSS, JS and tools like Git/Github."</p>
 
@@ -224,20 +224,20 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <div>
       <h3 class="w3-padding-24 w3-text-light-green">My Education</h3>
 
-      <img src="/images/rgpv.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
-    <p class="text-edu-hv">
-      <span class="w3-large w3-margin-right"> <b>Rajiv Gandhi Proudyogiki Vishwavidyalaya(RGPV/ RGTU), </b><i>(Bhopal, Madhya Pradesh)</i></span>
-      <br>Master of Computer Applications(Regular) | 2025(exp.)
+      <img src="/images/rgpv.jpg" alt="Rgpv" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
+      <p class="text-edu-hv">
+        <span class="w3-large w3-margin-right"> <b>Rajiv Gandhi Proudyogiki Vishwavidyalaya(RGPV/ RGTU), </b><i>(Bhopal, Madhya Pradesh)</i></span>
+      <br>Master of Computer Applications(Regular) | Accredited with NBA & Grade 'A' by NAAC. | <b>2025(exp.)</b>
     </p>
     <div>
       <p class="slide-hvr skill-txt">"I honed soft skills like problem-solving, teamwork, and communication, etc, alongside my coursework."</p>
     </div>
     <hr>
 
-    <img src="/images/jiwaji.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
+    <img src="/images/jiwaji.jpg" alt="Jiwaji" class="w3-left w3-circle w3-margin-right icon-hvr" style="width:80px">
     <p class="text-edu-hv">
-      <span class="w3-large w3-margin-right"> <b>Jiwaji University <sup>NAAC++</sup>, </b><i>(Gwalior, Madhya Pradesh)</i></span>
-      <br>Bachelor of Computer Applications(Regular) | 2022
+      <span class="w3-large w3-margin-right"> <b>Jiwaji University, </b><i>(Gwalior, Madhya Pradesh)</i></span>
+      <br>Bachelor of Computer Applications(Regular) | Accredited with Grade 'A<sup>++</sup>' by NAAC. | <b>2022</b>
     </p>
     <div>
       <p class="slide-hvr skill-txt">"Concepts of computer applications and programming, technological adaptation, and personal growth help me develop a well-rounded skill set for the professional world."</p>
@@ -261,7 +261,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/Quizzy/">
-          <img src="./images/projects-img/quizzy.jpg" alt="Cinque Terre">
+          <img src="./images/projects-img/quizzy.jpg" alt="Quizzy">
         </a>
         <div class="desc icon-hvr"><b>Quizzy</b><hr>A streamlined quiz platform featuring a user-friendly interface, allowing participants to take quizzes and receive their scores instantly. All quiz data and results are securely stored in a database, ensuring efficient tracking and easy retrieval of information.</div>
       </div>
@@ -270,7 +270,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/vatavaran/">
-          <img src="./images/projects-img/vatavaran.jpg" alt="Forest">
+          <img src="./images/projects-img/vatavaran.jpg" alt="Vatavaran">
         </a>
         <div class="desc icon-hvr"><b>Vatavaran</b><hr>A comprehensive weather application offering a range of features and functionalities. It provides detailed weather information, including forecasts, real-time updates, and various environmental conditions, all presented in an intuitive and user-friendly interface.</div>
       </div>
@@ -279,7 +279,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/Calculator/">
-          <img src="./images/projects-img/calculator.jpg" alt="Northern Lights">
+          <img src="./images/projects-img/calculator.jpg" alt="Calculator">
         </a>
         <div class="desc icon-hvr"><b>Parikalak</b><hr>A sleek and user-friendly calculator designed for simplicity, offering multiple operations for efficient calculations. Its intuitive interface ensures ease of use, making it ideal for both basic and advanced mathematical tasks.</div>
       </div>
@@ -288,7 +288,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/Phonebook/">
-          <img src="./images/projects-img/phonebook.jpg" alt="Mountains">
+          <img src="./images/projects-img/phonebook.jpg" alt="Phonebook">
         </a>
         <div class="desc icon-hvr"><b>Phonebook</b><hr>It can be used to record the personal contact details of individuals. The user can perform the CUD operation in this project. You can add your contact details and then you can search them. You can even print the record for the report file and, we can delete all the contacts.</div>
       </div>
@@ -310,7 +310,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
 
     <div class="w3-section">
       <p class="w3-hover-text-yellow"><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> <a href="https://maps.app.goo.gl/iEZnXLXgUqw2tYuo6/" target="_blank" style="text-decoration: none;">Bhopal, Madhya Pradesh, 🇮🇳</a></p>
-      <p class="w3-hover-text-yellow"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> <a target="_blank" style="text-decoration: none;" href="tel:+918318748559" >Phone: +91 8318748559</a></p>
+      <p class="w3-hover-text-yellow"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> <a target="_blank" style="text-decoration: none;" href="tel:+918*****9" >Phone: +91 8*****9</a></p>
       <p class="w3-hover-text-yellow"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> <a href="mailto:krishnaguptamdz@gmail.com" style="text-decoration: none;">Email: krishnaguptamdz@gmail.com</a></p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
@@ -355,7 +355,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <a href="https://www.linkedin.com/in/krishnaa6268/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-linkedin w3-hover-opacity icon-hvr"></i></a>
     <a href="https://github.com/krishnaa6268/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-github w3-hover-opacity icon-hvr"></i></a>
     <a href="https://twitter.com/VivekGuptaMDz/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-twitter w3-hover-opacity icon-hvr"></i></a>
-    <a href="https://wa.me/918318748559/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-whatsapp w3-hover-opacity icon-hvr"></i></a>
+    <a href="https://wa.me/8*****9/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-whatsapp w3-hover-opacity icon-hvr"></i></a>
     <a href="https://www.facebook.com/krishnaguptamdz/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-facebook-official w3-hover-opacity icon-hvr"></i></a>
     </div>
     
