--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>कृष्णः-पत्रपुस्तम् (Portfolio)</title>
+<title>कृष्णः-पत्रपुस्तम् (Krishnaa-Portfolio)</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:image" href="images/favicon.ico">
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://krishnaaportfolio.vercel.app">
 <meta property="og:type" content="profile">
 <meta property="og:title" content="A Glimpse of Krishnaa.">
-<meta property="og:description" content="Krishnaa is a passionate and dedicated web developer with growing expertise in front end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
+<meta property="og:description" content=" Krishna is a passionate and dedicated web developer with growing expertise in front-end and back-end technologies and also eager to contribute to innovative projects and take on challenging roles...">
 <meta property="og:image" content="https://krishnaaportfolio.vercel.app/images/main.png">
 <meta property="og:image:width" content="200">
 <meta property="og:image:height" content="200">
@@ -87,7 +87,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 I love transforming ideas into dynamic and responsive web applications. My journey in web development has allowed me to gain a strong foundation in <b>HTML, CSS, JavaScript,</b> and I'm continuously expanding my skills in advanced Java concepts, particularly as I dive deeper into Advanced Java with <b>Spring Boot</b> framework.<br>
 Beyond coding, I strongly advocate for collaboration and community to enhance my teamwork and leadership skills and build meaningful connections within the tech community.<br>
 I also enjoy exploring <b>scientific research works</b> and aspire to contribute to the ever-evolving technological landscape.
-My passion for philosophy and logical thinking approach fuels my desire to think critically and explore new perspectives, directly influencing my programming approach.
+My passion for philosophy and logical thinking fuels my desire to think critically and explore new perspectives, directly influencing my programming approach.
 With a detail-oriented approach and a drive to continuously learn and improve, I'm eager to contribute to innovative projects and take on challenging roles where I can grow and help businesses thrive through technology.<br>
 <b>Danyawad🙏</b>
     </p>
