--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>कृष्णः-पत्रपुस्तम् (Krishnaa-Portfolio)</title>
+<title>Krishnaa's Portfolio(कृष्णः-पत्रपुस्तम्)</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:image" href="images/favicon.ico">
