--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h6 class="text-hv">Weaving Web Wonders...</h6>
     <hr style="width:200px" class="w3-opacity">
     <p class="icon-hvr"> <b>Namaskaram!</b> <br>
-      I'm Krishna Kumar Gupta, a passionate and dedicated web developer with growing expertise in front-end and back-end technologies. I am pursuing a degree in Master of Computer Applications<i><b>(MCA)</b> from Lakshmi Narain College of Technology, Bhopal.</i> affiliated with <b>RGPV University</b>, Bhopal. MP.<br>
+      I'm Krishna Kumar Gupta, a passionate and dedicated web developer with growing expertise in front-end and back-end technologies. I am pursuing a degree in Master of Computer Applications<i><b>(MCA)</b> from Lakshmi Narain College of Technology(LNCT), Bhopal.</i> affiliated with <b>RGPV University</b>, Bhopal. MP.<br>
 I love transforming ideas into dynamic and responsive web applications. My journey in web development has allowed me to gain a strong foundation in <b>HTML, CSS, JavaScript,</b> and I'm continuously expanding my skills in advanced Java concepts, particularly as I dive deeper into Advanced Java with <b>Spring Boot</b> framework.<br>
 Beyond coding, I strongly advocate for collaboration and community to enhance my teamwork and leadership skills and build meaningful connections within the tech community.<br>
 I also enjoy exploring <b>scientific research works</b> and aspire to contribute to the ever-evolving technological landscape.
