--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     <a href="https://twitter.com/VivekGuptaMDz/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-twitter w3-hover-opacity icon-hvr"></i></a>
     <a href="https://wa.me/8*****9/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-whatsapp w3-hover-opacity icon-hvr"></i></a>
     <a href="https://www.facebook.com/krishnaguptamdz/" target="_blank" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-facebook-official w3-hover-opacity icon-hvr"></i></a>
+    <a href="query.html" style="text-decoration: none;" class="w3-hover-text-green"><i class="fa fa-question-circle w3-hover-opacity icon-hvr"></i></a>
     </div>
     
     <p class="w3-medium slide-hvr">All Rights Reserved © 2024-25 | Developed with 🤍 by <a href="#" target="_blank" style="text-decoration: none;" class="w3-hover-text-green">KrishnaMDz</a>.</p>
