--- a/query.html
+++ b/query.html
@@ -38,7 +38,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Avatar image in top left corner -->
   <a href="index.html"><img src="./images/k-logo.png" alt="Krishna-Logo" style="width:100%; border-radius: 50%;"></a>
   <br>
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="query.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-home w3-xxlarge icon-hvr"></i>
     <p>HOME</p>
   </a>
@@ -54,24 +54,24 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 <!-- Page Content -->
-<div class="w3-padding-large" id="main">
+<div class="w3-padding-large " id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small dynamic-text icon-hvr"></span></h1>
-    <p class="w3-medium slide-hvr"><b>Any Query?</b></p>
-    <i class="text-edu-hv">Kindly complete this form with accurate and appropriate information. Your prompt attention to this matter is greatly appreciated.</i>
+    <p class="w3-medium">
+      <h3 class="slide-hvr" style="color: #03f1e1;">Let me know if you require any further information or support.</h3>
+    </p>
+    <i class="text-edu-hv">(Kindly complete this form with accurate and appropriate information. Your prompt attention to this matter is greatly appreciated.)</i>
   </header>
 
-  <div  class="w3-content w3-justify w3-text-grey w3-padding-64 " id="about">
-    <div class="support">
-      <iframe src="https://forms.gle/33HCFHBXbvGTdSK79" width="500" height="800"></iframe>
+  <!-- Form-Section -->
+  <div  class="w3-content w3-justify w3-text-grey w3-padding-64" id="query">
+    <div class="form-aspect" >
+      <iframe class="support" src="https://forms.gle/33HCFHBXbvGTdSK79"></iframe>
     </div>
+    <!-- End-Form-Section -->
   </div>
 
-  
-  
-
-  
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
@@ -93,6 +93,5 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </footer>
 <!-- END PAGE CONTENT -->
 </div>
-<!-- reference for data collection: https://github.com/jamiewilson/form-to-google-sheets -->
 </body>
 </html>
