--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo"><span class="w3-hide-small dynamic-text icon-hvr">I'm Krishna Kumar Gupta...</span></h1>
     <p class="w3-text-light-green">Enthusiastic and creative web designer crafting engaging experiences.</p>
     <div class="grow-img">
-      <img src="./images/main.png" alt="Krishna Kumar Gupta" class="w3-image radius-main " width="992" height="1108">
+      <img src="./images/krishna-kumar-gupta.png" alt="Krishna-Kumar-Gupta" class="w3-image radius-main " width="992" height="1108">
     </div>
   </header>
 
