--- a/index.html
+++ b/index.html
@@ -274,13 +274,24 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
         <div class="desc icon-hvr"><b>Vatavaran</b><hr>A comprehensive weather application offering a range of features and functionalities. It provides detailed weather information, including forecasts, real-time updates, and various environmental conditions, all presented in an intuitive and user-friendly interface.</div>
       </div>
     </div>
-    
+
+    <!--
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/Calculator/">
           <img src="./images/projects-img/calculator.jpg" alt="Calculator">
         </a>
-        <div class="desc icon-hvr"><b>Parikalak</b><hr>A sleek and user-friendly calculator designed for simplicity, offering multiple operations for efficient calculations. Its intuitive interface ensures ease of use, making it ideal for both basic and advanced mathematical tasks.</div>
+        <div class="desc icon-hvr"><b>Parikalak</b><hr>A sleek and user-friendly calculator designed for simplicity, offering multiple operations for efficient calculations. Its intuitive interface ensures ease of use, making it ideal for basic and advanced mathematical tasks.</div>
+      </div>
+    </div>
+    -->
+
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/krishnaa6268/ed-tech-commerce/">
+          <img src="./images/projects-img/ed-comm.png" alt="Ed-Tech">
+        </a>
+        <div class="desc icon-hvr"><b>Ed-Tech</b><hr>Developed an educational e-commerce platform with course browsing and purchases according to their interests and learning goals. Focused on basic UI design, and user interaction, and gained experience in frontend development and Firebase integration.</div>
       </div>
     </div>
     
