--- a/index.html
+++ b/index.html
@@ -286,12 +286,13 @@ With a detail-oriented approach and a drive to continuously learn and improve, I
     </div>
     -->
 
+    
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="https://github.com/krishnaa6268/ed-tech-commerce/">
           <img src="./images/projects-img/ed-comm.png" alt="Ed-Tech">
         </a>
-        <div class="desc icon-hvr"><b>Ed-Tech</b><hr>Developed an educational e-commerce platform with course browsing and purchases according to their interests and learning goals. Focused on basic UI design, and user interaction, and gained experience in frontend development and Firebase integration.</div>
+        <div class="desc icon-hvr"><b>Ed-Tech</b><hr>Developed an educational e-commerce platform with course browsing and purchases according to their interests and learning goals. Focused on basic UI-design, and user interaction, and gained experience in frontend development and Firebase integration.</div>
       </div>
     </div>
     
